# fungai

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs  organisms.rs  rival.rs
crates/core/: Cargo.toml
crates/core/src/: abilities.rs  components.rs  config.rs  constants.rs  grid.rs  lib.rs  messages.rs  region.rs  simulation.rs  tile.rs
crates/fruiting/: Cargo.toml
crates/fruiting/src/: effects.rs  lib.rs  spores.rs
crates/growth/: Cargo.toml
crates/growth/src/: bias_decay.rs  decay.rs  density_flow.rs  dieback.rs  lib.rs  moisture.rs  nutrient.rs  tip.rs
crates/input/: Cargo.toml
crates/input/src/: action.rs  lib.rs  pointer.rs  priority.rs  (+4 more)
crates/regions/: Cargo.toml
crates/render/: Cargo.toml
crates/shroom_ai/: Cargo.toml
crates/shroom_core/: Cargo.toml
crates/shroom_fruiting/: Cargo.toml
crates/shroom_growth/: Cargo.toml
crates/shroom_input/: Cargo.toml
crates/shroom_regions/: Cargo.toml
crates/shroom_render/: Cargo.toml
crates/shroom_shrooms/: Cargo.toml
crates/shroom_shrooms/assets/shaders/: network.wgsl  terrain.wgsl  vignette.wgsl
crates/shroom_shrooms/src/: main.rs
crates/shroom_ui/: Cargo.toml
crates/shroom_world/: Cargo.toml
crates/ui/: Cargo.toml
crates/ui/src/: ability_bar.rs  game_screens.rs  hud.rs  lib.rs  slot_machine_ui.rs  spec_picker.rs  tile_popover.rs
crates/world/: Cargo.toml
docs/plans/: 2026-05-04-non-idiomatic-cleanup.md  2026-05-04-slim-core-and-tick-gate-render.md  2026-05-05-leafwing-input-integration.md  2026-05-05-map-seed.md  2026-05-07-debug-tooling.md  2026-05-07-density-flow-refactor.md  2026-05-18-civ-rework-phase1.md
(+55 files in other folders)
