cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = ["crates/*", "bin"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
bevy = "0.18"
rand = "0.10"
hexx = { version = "0.24", features = ["bevy"] }

fungai_core = { path = "crates/core" }
fungai_world = { path = "crates/world" }
fungai_growth = { path = "crates/growth" }
fungai_regions = { path = "crates/regions" }
fungai_render = { path = "crates/render" }
fungai_input = { path = "crates/input" }
fungai_ai = { path = "crates/ai" }
fungai_fruiting = { path = "crates/fruiting" }
fungai_ui = { path = "crates/ui" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
